Update changelog.... Add back in the UnlistedProperties as well as update them to be more explicit

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,3 +15,6 @@ Each part gets their own creative tab now.
 Cuisine add in pies, eggs, and burgers.
 Change the way cocoa trees work with bonemeal to be more like vanilla
 Add in knife and mixer to be used in recipes
+Add calendar back in and add it to support breaking animations
+Update unlisted properties to fix some issues
+Slight tweak on calendar model
