--- a/src/main/resources/assets/grimdecor/lang/en_US.lang
+++ b/src/main/resources/assets/grimdecor/lang/en_US.lang
@@ -5,12 +5,32 @@ grim.creative.grimdecor=Grim Decor
 tile.calendar.name=Calendar
 tile.wall_clock.name=Wall Clock
 tile.light_bulb.name=Light Bulb
+tile.fancy_stone.name=Fancy Stone
+tile.pot.name=Planter Pot
+tile.road.name=Road
+tile.craft_bone.name=Bone Decorations
+tile.craft_clay.name=Clay Decorations
+tile.chain.name=Iron Chain
+tile.cage.name=Iron Cage
+tile.lantern_paper.name=Paper Lantern
+tile.lantern_bone.name=Bone Lantern
+tile.lantern_iron.name=Iron Lantern
+tile.table.name=Table
+tile.counter.name=Counter
+tile.stool.name=Stool
+tile.chimney.name=Chimney
+tile.chair.name=Chair
+tile.wall.name=Wall
+tile.fence.name=Fence
+tile.fence_gate.name=Fence Gate
 
 #================= ITEMS =================#
 item.glass_shard.name=Glass Shard
 item.frame_iron.name=Iron Frames
 item.frame_wood.name=Wooden Frames
 item.wallpaper.name=Wallpaper
+item.unfired_pot.name=Uncooked Planter Pot
+item.unfired_craft.name=Uncooked Clay Decorations
 
 #================= INSTRUCTION MANUAL =================#
 grim.manual.grimdecor.modinfo=Adds in many different decorative items and blocks to spice up your Minecraft world.
@@ -33,3 +53,39 @@ grim.manual.grimdecor.subsection.wallpaper.page.info=Wallpaper gives you many op
 grim.manual.grimdecor.subsection.wallpaper.page.info.title=Information
 grim.manual.grimdecor.subsection.wallpaper.page.recipe=To place wallpaper just right click on a wall with a wallpaper item. Right click on it again and it will cycle through the available options. When placed next to other wallpaper it will take on the texture of the surrounding wallpaper.
 grim.manual.grimdecor.subsection.wallpaper.page.recipe.title=Recipe
+grim.manual.grimdecor.subsection.intro=Introduction
+grim.manual.grimdecor.subsection.intro.page.fancy=This mod adds many options to <f>4<f>ldecorate <f>0<f>r your house or other buildings with. <br>It adds furniture like chairs, tables, and stools, to a more expanded range of fences to choose from. This mod also includes other things like chains and cages to crafts which can cycle through many different display types. <br>Tables, Chairs, Counters, Walls, Stools, Chimneys, Fences, and Fence Gates can all be crafted out of all solid blocks in the game (even mods). <br>Go through this mods section and find out all their is to do with the Fancy Pack mod. 
+grim.manual.grimdecor.subsection.intro.page.fancy.title=Info
+grim.manual.grimdecor.subsection.intro.page.moss=This mod has many options of furniture that involve mossy cobblestone, as a result a recipe has been added to compensate.
+grim.manual.grimdecor.subsection.intro.page.moss.title=Mossy Cobblestone
+grim.manual.grimdecor.subsection.intro.page.stone=One of the new blocks that this mod adds is Fancy Stone which looks quite nice. Fancy Stone can also be converted back into stone if you like.
+grim.manual.grimdecor.subsection.intro.page.stone.title=Stone
+grim.manual.grimdecor.subsection.intro.page.road=Another new block that the FancyPack adds is the road block, which looks better then gravel roads and also gives a nice speed boost when walking on it.
+grim.manual.grimdecor.subsection.intro.page.road.title=Roads
+grim.manual.grimdecor.subsection.deco=Decoration
+grim.manual.grimdecor.subsection.deco.page.cage=The Fancy Pack adds in cages and chains to decorate your house if you like a dark or even evil feel for your building.
+grim.manual.grimdecor.subsection.deco.page.cage.title=Cages
+grim.manual.grimdecor.subsection.deco.page.lantern=The Fancy Pack also adds in different lighting choices besides torches. These include bone, iron, and paper lanterns.
+grim.manual.grimdecor.subsection.deco.page.lantern.title=Lanterns
+grim.manual.grimdecor.subsection.deco.page.crafts=Their are 3 basic crafts, the bone and clay crafts and the clay pot. The bone craft is ready after you are done crafting it and once placed right clicking it will cycle through various display types. The Unfired Clay Decoration and the Uncooked Clay Pot will need to be put into a furnace to be completed.
+grim.manual.grimdecor.subsection.deco.page.crafts.title=Decorations
+grim.manual.grimdecor.subsection.deco.page.firing=As said previously the Uncooked Clay Pot and Decoration needed to be cooked to be ready. Both blocks when right clicked, after placed, will switch through different display types. As you switch display types the pot will be able to support those type of plants on top. Also something special happens when a pot is placed on a stool (talked about later).
+grim.manual.grimdecor.subsection.deco.page.firing.title=Firing Clay
+grim.manual.grimdecor.subsection.furniture=Furniture
+grim.manual.grimdecor.subsection.furniture.page.table=The Fancy Pack adds in tables as part of some of the new furniture. Tables when placed to one another automatically place the legs at the correct positions for a table.
+grim.manual.grimdecor.subsection.furniture.page.table.title=Tables
+grim.manual.grimdecor.subsection.furniture.page.chair=The Fancy Pack also adds in chairs to go with your tables. These chairs re-orient depending on which way you place them. 
+grim.manual.grimdecor.subsection.furniture.page.chair.title=Chairs
+grim.manual.grimdecor.subsection.furniture.page.stool=Stools are smaller than chairs and go quite well when a clay pot is placed on top of them.
+grim.manual.grimdecor.subsection.furniture.page.stool.title=Stools
+grim.manual.grimdecor.subsection.furniture.page.counter=Counters are like the tables except without the legs so they just kinda float there.
+grim.manual.grimdecor.subsection.furniture.page.counter.title=Counters
+grim.manual.grimdecor.subsection.other=Other
+grim.manual.grimdecor.subsection.other.page.fence=Fences are like regular fences except they do not attach to vanilla fences but do attach to the new fence gates added. There is also some overlap with the fences already in Minecraft.
+grim.manual.grimdecor.subsection.other.page.fence.title=Fences
+grim.manual.grimdecor.subsection.other.page.fencegate=Fence Gates act like vanilla gates but do not connect to vanilla fences but fancy packs fences.
+grim.manual.grimdecor.subsection.other.page.fencegate.title=Fence Gates
+grim.manual.grimdecor.subsection.other.page.wall=Walls are basically counters but on their side and these like chairs re-orient depending on the direction they were placed from.
+grim.manual.grimdecor.subsection.other.page.wall.title=Walls
+grim.manual.grimdecor.subsection.other.page.chimney=Chimneys are a nice block for decorating houses and even emit smoke.
+grim.manual.grimdecor.subsection.other.page.chimney.title=Chimneys
