--- a/src/main/resources/assets/grimindustry/lang/en_US.lang
+++ b/src/main/resources/assets/grimindustry/lang/en_US.lang
@@ -3,11 +3,42 @@ grim.creative.grimindustry=Grim Industry
 
 #================= BLOCKS =================#
 tile.togglerack.name=Toggle Rack
+tile.iron_workbench.name=Iron Workbench
+tile.diamond_workbench.name=Diamond Workbench
+tile.ice_maker.name=Ice Maker
+tile.fire_block.name=Elemental Fire Block
+tile.water_block.name=Elemental Water Block
+tile.lava_block.name=Elemental Lava Block
+tile.spike.name=Iron Spikes
+tile.stone_sensor.name=Stone Sensor
+tile.wooden_sensor.name=Wooden Sensor
+tile.iron_sensor.name=Iron Sensor
+tile.netherrack_sensor.name=Netherrack Sensor
 
 #================= ITEMS =================#
+item.water_bowl.name=Bowl of Water
 
 #================= INSTRUCTION MANUAL =================#
 grim.manual.grimindustry.modinfo=Adds a bunch of tech stuff.
 grim.manual.grimindustry.subsection.toggle=Toggle Rack
 grim.manual.grimindustry.subsection.toggle.page.recipe=The Toggle Rack block when powered by redstone spawns fire above the block and when powered indirectly too.
 grim.manual.grimindustry.subsection.toggle.page.recipe.title=Recipe
+grim.manual.grimindustry.subsection.benches=Workbench Upgrades
+grim.manual.grimindustry.subsection.benches.page.recipes=The two new Workbenches added are made out of Iron and Diamond. The Iron will double your output from crafting and the Diamond will quadruple the output.
+grim.manual.grimindustry.subsection.benches.page.recipes.title=Recipes
+grim.manual.grimindustry.subsection.ice=Ice Maker
+grim.manual.grimindustry.subsection.ice.page.recipes=Using a bowl of water you will be able to create ice using the Ice Maker. Once crafted right click on the Ice Maker with a Bowl of Water and the water will start the freezing process give it some time and once done it will have the texture of ice on top. Punch it to get your ice.
+grim.manual.grimindustry.subsection.ice.page.recipes.title=Recipes
+grim.manual.grimindustry.subsection.elemental=Elemental Blocks
+grim.manual.grimindustry.subsection.elemental.page.fire=This elemental block when activated by redstone spawns fire above the block, when deactivated the fire gets removed.
+grim.manual.grimindustry.subsection.elemental.page.fire.title=Fire
+grim.manual.grimindustry.subsection.elemental.page.water=This elemental block when activated by redstone spawns a block of water above the block, when deactivated the water gets removed.
+grim.manual.grimindustry.subsection.elemental.page.water.title=Water
+grim.manual.grimindustry.subsection.elemental.page.lava=This elemental block when activated by redstone spawns a block of lava above the block, when deactivated the lava gets removed.
+grim.manual.grimindustry.subsection.elemental.page.lava.title=Lava
+grim.manual.grimindustry.subsection.spikes=Spikes
+grim.manual.grimindustry.subsection.spikes.page.recipe=Spikes can be placed on all 6 sides of a block and can be controlled by redstone. When active they deal a large amount of damage and when inactive they shrink into the ground and do no damage.
+grim.manual.grimindustry.subsection.spikes.page.recipe.title=Recipe
+grim.manual.grimindustry.subsection.sensors=Sensors
+grim.manual.grimindustry.subsection.sensors.page.recipes=Their are 4 different sensors added, Wood, Stone, Iron, and Netherrack. The Wood detects all entities, the Stone detects all living entities, the Iron detects only the player, and the Netherrack detects all hostile entities. A red light will appear if an entity is detected and then it will emit a redstone signal. 
+grim.manual.grimindustry.subsection.sensors.page.recipes.title=Recipes
