Add in Nuclear Craft, and Gravity science, as well as do some organization

--- a/src/main/resources/assets/grimindustry/lang/en_US.lang
+++ b/src/main/resources/assets/grimindustry/lang/en_US.lang
@@ -14,9 +14,34 @@ tile.stone_sensor.name=Stone Sensor
 tile.wooden_sensor.name=Wooden Sensor
 tile.iron_sensor.name=Iron Sensor
 tile.netherrack_sensor.name=Netherrack Sensor
+tile.attractor.name=Attractor
+tile.repulsor.name=Repulsor
+tile.gravitor.name=Gravitor
+tile.direction_attractor.name=Directional Attractor
+tile.direction_repulsor.name=Directional Repulsor
+tile.direction_gravitor.name=Directional Gravitor
+tile.nuclear_bomb.name=Nuclear Bomb
+tile.reactor.name=Nuclear Reactor
+tile.bomb_shell.name=Bomb Shell
+tile.c4.name=C4
+tile.uranium_ore.name=Uranium Ore
 
 #================= ITEMS =================#
 item.water_bowl.name=Bowl of Water
+item.gravity_boots.name=Gravity Boots
+item.anti_radiation_boots.name=Anti-Radiation Boots
+item.anti_radiation_legs.name=Anti-Radiation Leggings
+item.anti_radiation_chest.name=Anti-Radiation Chest
+item.anti_radiation_helmet.name=Anti-Radiation Helmet
+item.iron_parts.name=Iron Parts
+item.reactor_core_case.name=Reactor Core Case
+item.reactor_core.name=Nuclear Reactor Core
+item.graphite_rod.name=Graphite Rod
+item.graphite.name=Graphite
+item.refined_plutonium.name=Refined Plutonium
+item.plutonium_ingot.name=Plutonium Ingot
+item.refined_uranium.name=Refined Uranium
+item.uranium_ingot.name=Uranium Ingot
 
 #================= INSTRUCTION MANUAL =================#
 grim.manual.grimindustry.modinfo=Adds a bunch of tech stuff.
@@ -42,3 +67,50 @@ grim.manual.grimindustry.subsection.spikes.page.recipe.title=Recipe
 grim.manual.grimindustry.subsection.sensors=Sensors
 grim.manual.grimindustry.subsection.sensors.page.recipes=Their are 4 different sensors added, Wood, Stone, Iron, and Netherrack. The Wood detects all entities, the Stone detects all living entities, the Iron detects only the player, and the Netherrack detects all hostile entities. A red light will appear if an entity is detected and then it will emit a redstone signal. 
 grim.manual.grimindustry.subsection.sensors.page.recipes.title=Recipes
+grim.manual.grimindustry.subsection.attract=Attractors
+grim.manual.grimindustry.subsection.attract.page.recipe=Their are two types of attractors the regular Attractor and the Directional Attractor. When powered the regular Attractor will start to pull in entities around it with a range of 12 blocks. The Directional Attractor is different because only the side with the attractor end will attract entities. 
+grim.manual.grimindustry.subsection.attract.page.recipe.title=Recipes
+grim.manual.grimindustry.subsection.repulse=Repulsors
+grim.manual.grimindustry.subsection.repulse.page.recipe=Their are two types of repulsors the regular Repulsor and the Directional Repulsor. When powered the regular Repulsor will start to push entities away with a range of 12 blocks. The Directional Repulsor is different because only the side with the repulsor end will push entities. 
+grim.manual.grimindustry.subsection.repulse.page.recipe.title=Recipes
+grim.manual.grimindustry.subsection.gravitor=Gravitors
+grim.manual.grimindustry.subsection.gravitor.page.recipe=Their are two types of gravitors the regular Gravitor and the Directional Gravitor. When powered the regular Gravitor will start to make entities around it float into the air. The Directional Gravitor is different because only the side with the gravitor end will make entities float into the air. 
+grim.manual.grimindustry.subsection.gravitor.page.recipe.title=Recipes
+grim.manual.grimindustry.subsection.boots=Gravity Boots
+grim.manual.grimindustry.subsection.boots.page.recipe=Gravity Boots are made so that while wearing them you will not be effected by any of the different blocks when they are active. So you will be able to freely move around. 
+grim.manual.grimindustry.subsection.boots.page.recipe.title=Recipe
+grim.manual.grimindustry.subsection.refining=Refining
+grim.manual.grimindustry.subsection.refining.page.uranium=Uranium Ore can be found naturally below the surface in small clusters but if you are in old chunks or you just want to craft some their is a recipe. But be careful because it will hurt you when mining it unless you have a radiation suit.
+grim.manual.grimindustry.subsection.refining.page.uranium.title=Uranium Ore
+grim.manual.grimindustry.subsection.refining.page.armor=If you are planning on mining some uranium you will want an Anti-Radiation Suit so you won't take any damage while working with it.
+grim.manual.grimindustry.subsection.refining.page.armor.title=Anti-Radiation Suit
+grim.manual.grimindustry.subsection.refining.page.uranium_smelt=Once you have your Uranium ore you will want to get the ore from it by smelting the ore.
+grim.manual.grimindustry.subsection.refining.page.uranium_smelt.title=Uranium Ingots
+grim.manual.grimindustry.subsection.refining.page.refined_uranium=Uranium ingots only use is to refine it into Refined Uranium. Refined Uranium will come in handy later.
+grim.manual.grimindustry.subsection.refining.page.refined_uranium.title=Refining Uranium
+grim.manual.grimindustry.subsection.refining.page.plutonium=Now using that Refined Uranium you can create Plutonium Ingots again which will be used later.
+grim.manual.grimindustry.subsection.refining.page.plutonium.title=Plutonium
+grim.manual.grimindustry.subsection.refining.page.refined_plutonium=Like Uranium Ingots, Plutonium's only use is to be refined into Refined Plutonium.
+grim.manual.grimindustry.subsection.refining.page.refined_plutonium.title=Refined Plutonium
+grim.manual.grimindustry.subsection.refining.page.reactor_core=You now have your unstable materials ready for creating a reactor core which is used for the creation of a Nuclear Reactor.
+grim.manual.grimindustry.subsection.refining.page.reactor_core.title=Reactor Core
+grim.manual.grimindustry.subsection.reactor=Reactor
+grim.manual.grimindustry.subsection.reactor.page.graphite=The first thing needed for the creation of the Nuclear Reactor is Graphite which will be converted later into rods.
+grim.manual.grimindustry.subsection.reactor.page.graphite.title=Graphite
+grim.manual.grimindustry.subsection.reactor.page.graphite_rod=Graphite Rods are made from graphite and are needed in the creation of a Nuclear Reactor.
+grim.manual.grimindustry.subsection.reactor.page.graphite_rod.title=Graphite Rods
+grim.manual.grimindustry.subsection.reactor.page.reactor_case=To house you Reactor Core you will need casing which is made out of Graphite Rods.
+grim.manual.grimindustry.subsection.reactor.page.reactor_case.title=Reactor Core Case
+grim.manual.grimindustry.subsection.reactor.page.iron_parts=The final parts needed before you can create a Nuclear Reactor is Iron Parts. 
+grim.manual.grimindustry.subsection.reactor.page.iron_parts.title=Iron Parts
+grim.manual.grimindustry.subsection.reactor.page.reactor=Finally you have all of the parts necessary for creating a Nuclear Reactor. The Nuclear Reactor is needed for the creation of a Nuclear Bomb and if you right click on it you can have it emit a redstone signal, right click again to turn it off.
+grim.manual.grimindustry.subsection.reactor.page.reactor.title=Nuclear Reactor
+grim.manual.grimindustry.subsection.explosives=Explosives
+grim.manual.grimindustry.subsection.explosives.page.aluminium=To get started in the creation of explosives you will need Aluminium to create bomb shells.
+grim.manual.grimindustry.subsection.explosives.page.aluminium.title=Aluminium
+grim.manual.grimindustry.subsection.explosives.page.bomb_shell=Bomb Shells are needed to house the explosives themselves.
+grim.manual.grimindustry.subsection.explosives.page.bomb_shell.title=Bomb Shells
+grim.manual.grimindustry.subsection.explosives.page.c4=C4 is the first explosive added which is stronger than TNT. C4 does explode immediately once activated with redstone unlike TNT.
+grim.manual.grimindustry.subsection.explosives.page.c4.title=C4
+grim.manual.grimindustry.subsection.explosives.page.nuclear_bomb=The second explosive added is a Nuclear Bomb. The Nuclear Bomb is stronger than both TNT and C4 and makes a huge explosion once activated with redstone. Once activated it explodes immediately like C4. Enjoy!
+grim.manual.grimindustry.subsection.explosives.page.nuclear_bomb.title=Nuclear Bomb
